# CrewAI-Learn

./: .gitignore
criacao_conteudo/: README.md  pyproject.toml
criacao_conteudo/src/criacao_conteudo/: main.py
criacao_conteudo/src/criacao_conteudo/crews/criacao_conteudo/: criacaoConteudo_crew.py
meeting_minutes/src/meeting_minutes/: main.py
meeting_minutes/src/meeting_minutes/crews/MeetingMinutes_crew/: MeetingMinutes_crew.py
meeting_minutes/src/meeting_minutes/crews/MeetingMinutes_crew/config/: agents.yaml  tasks.yaml
poem_flow/: poem.txt  pyproject.toml
poem_flow/src/poem_flow/: main.py
