[project]
name = "criacao_conteudo"
version = "0.1.0"
description = "criacao-conteudo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
]

[project.scripts]
kickoff = "criacao_conteudo.main:kickoff"
plot = "criacao_conteudo.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
